# CProgramingStructure

./: CMakeLists.txt
src/: main.c
